--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
